add Task5 and Task6

--- a/Ranking/WIKI_NDCG.ipynb
+++ b/Ranking/WIKI_NDCG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -219,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Нормализация векторов\n",
-    "vectors_sent_norm = vectors_sent\n",
+    "vectors_sent_norm = list(vectors_sent)\n",
     "for i, vec in enumerate(vectors_sent):\n",
     "    vectors_sent_norm[i] = normolizeVec(vec)"
    ]
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -566,12 +566,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "'Французский художник добился успеха со смеющейся коровой (на илл.) и провалился с пьющими ослами'\n",
     "'С собакой викингов ходят на лося.'\n",
@@ -580,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -592,11 +590,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Состояниеотпатрулирована\n",
+      "\n",
+      "\n",
+      "30 декабря 1864(1864-12-30)\n",
+      "\n",
+      "Ла-Рош-сюр-Йон (Вандея), Франция\n",
+      "\n",
+      "10 октября 1939(1939-10-10) (74 года)\n",
+      "\n",
+      "Фавроль (Эндр), Франция\n",
+      "\n",
+      "Франция Франция\n",
+      "\n",
+      "график, карикатурист, аниматор\n",
+      "\n",
+      "Бенжаме́н Рабье́ (фр. Benjamin Rabier; 30 декабря 1864[К 1], Ла-Рош-сюр-Йон, департамент Вандея — 10 октября 1939, Фавроль, департамент Эндр, Франция) — французский художник-график, литератор, книжный иллюстратор, автор комиксов, один из пионеров анималистической мультипликации[1][2][3].\n",
+      "\n",
+      "Родился 30 декабря 1864 года в Ла-Рош-сюр-Йон в рабочей семье, родом из Эндра.\n",
+      "\n",
+      "Мать, Мари Массон (фр. Marie Masson) была дочерью трактирщика, отец — помощником столяра.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for sent in all_real_sentenses[from_:from_ + step]:\n",
     "    print sent\n",
@@ -605,28 +631,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "marks = ['0000000000',\n",
-    "         '0000000000',\n",
-    "         '0000000000'\n",
-    "        ]\n",
-    "with open('sentenses_marks', 'a') as sent_file:\n",
-    "    for i, sent in enumerate(all_real_sentenses[from_:from_+step]):\n",
-    "        line = \"\\t\".join([sent.strip(), marks[0][i], marks[1][i], marks[2][i]]) + '\\n'\n",
-    "        sent_file.write(line.encode('utf8'))\n",
-    "from_ += step"
+    "# marks = ['0000000000',\n",
+    "#          '0000000000',\n",
+    "#          '0000000000'\n",
+    "#         ]\n",
+    "# with open('sentenses_marks', 'a') as sent_file:\n",
+    "#     for i, sent in enumerate(all_real_sentenses[from_:from_+step]):\n",
+    "#         line = \"\\t\".join([sent.strip(), marks[0][i], marks[1][i], marks[2][i]]) + '\\n'\n",
+    "#         sent_file.write(line.encode('utf8'))\n",
+    "# from_ += step"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 77,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -635,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -920,21 +946,21 @@
        "      <td>На время космического полёта члены основного э...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>321</th>\n",
        "      <td>Транспортный пилотируемый корабль «Союз МС-04»...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>322</th>\n",
        "      <td>Как сказал командир корабля Фёдор Юрчихин, это...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>323</th>\n",
@@ -955,7 +981,7 @@
        "      <td>Талисманом и индикатором невесомости экипажа с...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>326</th>\n",
@@ -1127,12 +1153,12 @@
        "317  Позади корабля в контуре Земли изображены рису...  0  0  0\n",
        "318  По внешнему кругу эмблемы нанесены: название к...  0  0  0\n",
        "319  13 января 2017 года экипажи пилотируемых кораб...  0  0  0\n",
-       "320  На время космического полёта члены основного э...  0  0  1\n",
-       "321  Транспортный пилотируемый корабль «Союз МС-04»...  0  0  0\n",
-       "322  Как сказал командир корабля Фёдор Юрчихин, это...  0  0  0\n",
+       "320  На время космического полёта члены основного э...  0  0  0\n",
+       "321  Транспортный пилотируемый корабль «Союз МС-04»...  0  0  1\n",
+       "322  Как сказал командир корабля Фёдор Юрчихин, это...  0  0  1\n",
        "323  Джек Фишер считает что это женское имя, а Фёдо...  0  0  0\n",
        "324  Благодаря этому экипаж следующей миссии задума...  0  0  0\n",
-       "325  Талисманом и индикатором невесомости экипажа с...  0  0  0\n",
+       "325  Талисманом и индикатором невесомости экипажа с...  0  0  1\n",
        "326  Он стойко переносит все трудности: покоряет со...  0  0  0\n",
        "327  Другими индикаторами невесомости стали фигурки...  0  0  2\n",
        "328  Талисманом астронавта NASA Джека Фишера стало ...  0  0  0\n",
@@ -1155,7 +1181,7 @@
        "[344 rows x 4 columns]"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1194,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1222,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -1255,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1270,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -1294,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1316,7 +1342,7 @@
       "NDCG fot query: \t\n",
       " \"Герои мультфильма стали индикаторами невесомости космического корабля «Арго».\" \n",
       " \n",
-      "0.896286588844\n",
+      "0.931534841078\n",
       "–––––––––––––––––––––––––\n"
      ]
     }
@@ -1344,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -1366,7 +1392,7 @@
       "NDCG fot query: \t\n",
       " \"Герои мультфильма стали индикаторами невесомости космического корабля «Арго».\" \n",
       " \n",
-      "0.890449456066\n",
+      "0.941810576266\n",
       "–––––––––––––––––––––––––\n"
      ]
     }
@@ -1401,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -1410,7 +1436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.843170199998\n"
+      "0.854919617409\n"
      ]
     }
    ],
@@ -1427,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1436,12 +1462,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.850581982256\n"
+      "0.867702355656\n"
      ]
     }
    ],
    "source": [
     "print np.mean(np.array(ndcg_idf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Языковая модель"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getProb(q, doc):\n",
+    "    res = np.zeros(len(q.items()))\n",
+    "    for i, q_word in enumerate(q.keys()):\n",
+    "        for d_word, d_num in doc.items():\n",
+    "            if q_word == d_word:\n",
+    "                res[i] += d_num\n",
+    "        res[i] /= len(doc)\n",
+    "    return np.array(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getRanks(q, docs, lamb=0.5):\n",
+    "    union_docs = {}\n",
+    "    for doc in docs:\n",
+    "        union_docs = {k : union_docs.get(k, 0) + doc.get(k, 0) for k in set(union_docs) | set(doc)}\n",
+    "        \n",
+    "    union_prob = getProb(q, union_docs)\n",
+    "    res = []\n",
+    "    for doc in docs:\n",
+    "        vecProb = (1 - lamb) * union_prob + lamb * getProb(q, doc) + \\\n",
+    "                  np.array([10e-32] * len(q)) # сглаживание ненайденных слов\n",
+    "        res.append(np.prod(vecProb))\n",
+    "    \n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDCG fot query: \t\n",
+      " \"Французский художник добился успеха со смеющейся коровой (на илл.) и провалился с пьющими ослами.\" \n",
+      " \n",
+      "0.825624507667\n",
+      "–––––––––––––––––––––––––\n",
+      "NDCG fot query: \t\n",
+      " \"С собакой викингов ходят на лося.\" \n",
+      " \n",
+      "0.846001189251\n",
+      "–––––––––––––––––––––––––\n",
+      "NDCG fot query: \t\n",
+      " \"Герои мультфильма стали индикаторами невесомости космического корабля «Арго».\" \n",
+      " \n",
+      "0.940799193495\n",
+      "–––––––––––––––––––––––––\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num_query in range(3):\n",
+    "    rank = getRanks(vectors_query[num_query], vectors_sent)\n",
+    "    serp = sorted(zip(range(len(rank)), rank), key=itemgetter(1), reverse=True)\n",
+    "    order = zip(*serp)[0]\n",
+    "    ranks = []\n",
+    "    for row_idx in order:\n",
+    "        ranks.append(DF.loc[row_idx, num_query + 1])\n",
+    "    print 'NDCG fot query: \\t\\n \"%s\" \\n ' %queries[num_query]\n",
+    "    ndcg_idf.append(NDCG(ranks))\n",
+    "    print ndcg_idf[-1]\n",
+    "    print '–––––––––––––––––––––––––'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.78473649123298983"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.array(ndcg_idf))"
    ]
   }
  ],
