--- a/Tasks/Task8.ipynb
+++ b/Tasks/Task8.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 277,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 274,
    "metadata": {
     "collapsed": false
    },
@@ -74,16 +74,18 @@
     "    similars = []\n",
     "    for i in range(len(cls)):\n",
     "        for j in range(i + 1, len(cls)):\n",
-    "            similars.append(get_min_similar(cls[i], cls[j]))\n",
-    "            \n",
-    "    return list(sorted(similars, key=itemgetter(1))[0][1])\n",
+    "            winner = [i,j,get_min_similar(cls[i], cls[j])]\n",
+    "            similars.append(winner)\n",
+    "    \n",
+    "    pair = sorted(similars, key=itemgetter(2), reverse=True)[0][:2]\n",
+    "    \n",
+    "    return pair\n",
     "\n",
     "def get_complete_pair(cls):\n",
     "    similars = []\n",
     "    for i in range(len(cls)):\n",
     "        for j in range(i + 1, len(cls)):\n",
-    "            winner = [i,j,get_min_similar(cls[i], cls[j])]\n",
-    "#             print winner\n",
+    "            winner = [i,j,get_max_similar(cls[i], cls[j])]\n",
     "            similars.append(winner)\n",
     "    \n",
     "    pair = sorted(similars, key=itemgetter(2), reverse=True)[0][:2]\n",
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +145,7 @@
    ],
    "source": [
     "while(len(dots) != 1):\n",
-    "    winner_pair = get_complete_pair(dots)\n",
+    "    winner_pair = get_single_pair(dots)\n",
     "    dots = merge_cls(dots, winner_pair[0], winner_pair[1])"
    ]
   },
@@ -151,8 +153,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../Images/Solved_clast.png\">"
+    "<img src=\"../Images/Single_clast.png\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b  merge with e . New class: b e \n",
+      "\n",
+      "c  merge with d . New class: c d \n",
+      "\n",
+      "h  merge with c d . New class: h c d \n",
+      "\n",
+      "b e  merge with h c d . New class: b e h c d \n",
+      "\n",
+      "f  merge with b e h c d . New class: f b e h c d \n",
+      "\n",
+      "a  merge with f b e h c d . New class: a f b e h c d \n",
+      "\n",
+      "g  merge with a f b e h c d . New class: g a f b e h c d \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(len(dots) != 1):\n",
+    "    winner_pair = get_complete_pair(dots)\n",
+    "    dots = merge_cls(dots, winner_pair[0], winner_pair[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
