--- a/Tasks/Task8.ipynb
+++ b/Tasks/Task8.ipynb
@@ -116,6 +116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 275,
    "metadata": {
@@ -157,6 +164,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complete"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 278,
    "metadata": {
@@ -188,6 +202,15 @@
     "while(len(dots) != 1):\n",
     "    winner_pair = get_complete_pair(dots)\n",
     "    dots = merge_cls(dots, winner_pair[0], winner_pair[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<img src=\"../Images/Complete_clast.png\">"
    ]
   },
   {
